Updated to zend-expressive RC1
- Also added dev-master => 1.0-dev alias

--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,15 @@
         "psr-7",
         "zf2"
     ],
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0-dev"
+        }
+    },
     "require": {
         "php": ">=5.5",
         "psr/http-message": "^1.0",
-        "zendframework/zend-expressive": "^0.5",
+        "zendframework/zend-expressive": "^1.0@rc",
         "zendframework/zend-mvc": "^2.5",
         "zendframework/zend-psr7bridge": "^0.2.0"
     },
