--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "require": {
         "php": ">=5.5",
         "psr/http-message": "^1.0",
-        "zendframework/zend-expressive": "^1.0@rc",
+        "zendframework/zend-expressive-router": "^1.0",
         "zendframework/zend-mvc": "^2.5",
         "zendframework/zend-psr7bridge": "^0.2.0"
     },
