Use composer scripts for tests, cs checks

--- a/composer.json
+++ b/composer.json
@@ -36,5 +36,14 @@
       "psr-4": {
         "ZendTest\\Expressive\\Router\\": "test/"
       }
+    },
+    "scripts": {
+        "check": [
+            "@cs",
+            "@test"
+        ],
+        "cs": "phpcs",
+        "cs-fix": "phpcbf",
+        "test": "phpunit"
     }
 }
