--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,12 @@
     ],
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0-dev"
+            "dev-master": "1.0-dev",
+            "dev-develop": "1.1-dev"
         }
     },
     "require": {
-        "php": ">=5.5",
+        "php": "^5.5 || ^7.0",
         "psr/http-message": "^1.0",
         "zendframework/zend-expressive-router": "^1.0",
         "zendframework/zend-mvc": "^2.5",
