--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "php": "^5.5 || ^7.0",
         "psr/http-message": "^1.0",
         "zendframework/zend-expressive-router": "^1.0",
-        "zendframework/zend-mvc": "^2.5",
+        "zendframework/zend-router": "^2.5",
         "zendframework/zend-psr7bridge": "^0.2.0"
     },
     "require-dev": {
