--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
-        "squizlabs/php_codesniffer": "^2.6.2"
+        "zendframework/zend-coding-standard": "~1.0.0"
     },
     "autoload": {
       "psr-4": {
