Updated requirements and QA scripts
- Updated zend-expressive-router to 1.3.2+
- Updated PHPUnit to allow 5.6+
- Renamed `cs` script to `cs-check`, per other repos.
- Test against PHP 7.1
- Build notifications via IRC

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ matrix:
     - php: 7
       env:
         - CS_CHECK=true
+    - php: 7.1
     - php: hhvm 
   allow_failures:
     - php: hhvm
@@ -27,7 +28,8 @@ install:
 
 script:
   - composer test
-  - if [[ $CS_CHECK == 'true' ]]; then composer cs ; fi
+  - if [[ $CS_CHECK == 'true' ]]; then composer cs-check ; fi
 
 notifications:
-  email: true
+  irc: "irc.freenode.org#zftalk.dev"
+  email: false
