--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,12 @@
     "require": {
         "php": "^5.6 || ^7.0",
         "psr/http-message": "^1.0",
-        "zendframework/zend-expressive-router": "^1.2",
+        "zendframework/zend-expressive-router": "^1.3.2",
         "zendframework/zend-router": "^3.0",
         "zendframework/zend-psr7bridge": "^0.2.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8",
+        "phpunit/phpunit": "^4.8 || ^5.6",
         "zendframework/zend-coding-standard": "~1.0.0"
     },
     "autoload": {
@@ -40,10 +40,10 @@
     },
     "scripts": {
         "check": [
-            "@cs",
+            "@cs-check",
             "@test"
         ],
-        "cs": "phpcs",
+        "cs-check": "phpcs",
         "cs-fix": "phpcbf",
         "test": "phpunit"
     }
