--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "psr/http-message": "^1.0",
         "zendframework/zend-expressive-router": "^1.3.2",
         "zendframework/zend-router": "^3.0",
-        "zendframework/zend-psr7bridge": "^0.2.2"
+        "zendframework/zend-psr7bridge": "^0.2.2",
+        "fig/http-message-util": "^1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8 || ^5.6",
