Add docheader to QA toolchain
- Added malukenho/docheader as dev requirement.
- Added docheader specification.
- Added license-check script to composer; also added to `check` script.
- Updated travis config to also check license during CS_CHECK.
- Updated existing docblocks to pass tests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ install:
 script:
   - composer test
   - if [[ $CS_CHECK == 'true' ]]; then composer cs-check ; fi
+  - if [[ $CS_CHECK == 'true' ]]; then composer license-check ; fi
 
 notifications:
   irc: "irc.freenode.org#zftalk.dev"
