--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
     "require-dev": {
         "phpunit/phpunit": "^4.8 || ^5.6",
         "zendframework/zend-coding-standard": "~1.0.0",
-        "malukenho/docheader": "^0.1.5"
+        "malukenho/docheader": "^0.1.5",
+        "zendframework/zend-i18n": "^2.7"
     },
     "autoload": {
       "psr-4": {
