--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "fig/http-message-util": "^1.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7",
+        "phpunit/phpunit": "^5.7 || ^6.0",
         "zendframework/zend-coding-standard": "~1.0.0",
         "malukenho/docheader": "^0.1.5",
         "zendframework/zend-i18n": "^2.7"
