--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "middleware",
         "psr",
         "psr-7",
-        "zf2"
+        "zf"
     ],
     "extra": {
         "branch-alias": {
@@ -19,17 +19,17 @@
     },
     "require": {
         "php": "^5.6 || ^7.0",
-        "psr/http-message": "^1.0",
-        "zendframework/zend-expressive-router": "^2.0",
-        "zendframework/zend-router": "^3.0",
+        "fig/http-message-util": "^1.1.2",
+        "psr/http-message": "^1.0.1",
+        "zendframework/zend-expressive-router": "^2.1",
         "zendframework/zend-psr7bridge": "^0.2.2",
-        "fig/http-message-util": "^1.1"
+        "zendframework/zend-router": "^3.0.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7 || ^6.0",
-        "zendframework/zend-coding-standard": "~1.0.0",
         "malukenho/docheader": "^0.1.5",
-        "zendframework/zend-i18n": "^2.7"
+        "phpunit/phpunit": "^6.0.8 || ^5.7.15",
+        "zendframework/zend-coding-standard": "~1.0.0",
+        "zendframework/zend-i18n": "^2.7.3"
     },
     "autoload": {
       "psr-4": {
