Updated composer - fixed sections order, updated license-check script

--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,6 @@
         "zendframework",
         "zend-expressive"
     ],
-    "config": {
-        "sort-packages": true
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "2.0-dev",
-            "dev-develop": "2.1-dev"
-        }
-    },
     "support": {
         "issues": "https://github.com/zendframework/zend-expressive-zendrouter/issues",
         "source": "https://github.com/zendframework/zend-expressive-zendrouter",
@@ -52,6 +43,15 @@
             "ZendTest\\Expressive\\Router\\": "test/"
         }
     },
+    "config": {
+        "sort-packages": true
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "2.0-dev",
+            "dev-develop": "2.1-dev"
+        }
+    },
     "scripts": {
         "check": [
             "@license-check",
@@ -63,6 +63,6 @@
         "test": "phpunit --colors=always",
         "test-coverage": "phpunit --colors=always --coverage-clover clover.xml",
         "upload-coverage": "coveralls -v",
-        "license-check": "vendor/bin/docheader check src/ test/"
+        "license-check": "docheader check src/ test/"
     }
 }
