--- a/composer.json
+++ b/composer.json
@@ -19,19 +19,25 @@
         "slack": "https://zendframework-slack.herokuapp.com",
         "forum": "https://discourse.zendframework.com/c/questions/expressive"
     },
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/webimpress/zend-expressive-router.git"
+        }
+    ],
     "require": {
-        "php": "^5.6 || ^7.0",
+        "php": "^7.1",
         "fig/http-message-util": "^1.1.2",
         "psr/http-message": "^1.0.1",
-        "zendframework/zend-expressive-router": "^2.1",
+        "zendframework/zend-expressive-router": "dev-feature/php-7.1",
         "zendframework/zend-psr7bridge": "^0.2.2 || ^1.0.0",
         "zendframework/zend-router": "^3.0.2"
     },
     "require-dev": {
-        "malukenho/docheader": "^0.1.5",
-        "phpunit/phpunit": "^5.7.23 || ^6.4.3",
+        "malukenho/docheader": "^0.1.6",
+        "phpunit/phpunit": "^6.5.2",
         "zendframework/zend-coding-standard": "~1.0.0",
-        "zendframework/zend-i18n": "^2.7.3"
+        "zendframework/zend-i18n": "^2.7.4"
     },
     "autoload": {
         "psr-4": {
@@ -49,7 +55,8 @@
     "extra": {
         "branch-alias": {
             "dev-master": "2.0-dev",
-            "dev-develop": "2.1-dev"
+            "dev-develop": "2.1-dev",
+            "dev-release-3.0.0": "3.0.x-dev"
         }
     },
     "scripts": {
