--- a/composer.json
+++ b/composer.json
@@ -48,8 +48,8 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "2.0-dev",
-            "dev-develop": "2.1-dev"
+            "dev-master": "2.1.x-dev",
+            "dev-develop": "2.2.x-dev"
         }
     },
     "scripts": {
