--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,8 @@
     "extra": {
         "branch-alias": {
             "dev-master": "2.1.x-dev",
-            "dev-develop": "2.2.x-dev"
+            "dev-develop": "2.2.x-dev",
+            "dev-release-3.0.0": "3.0.x-dev"
         }
     },
     "scripts": {
