Fix config provider composer entry
Fixes zendframework/zend-expressive-skeleton#208

--- a/composer.json
+++ b/composer.json
@@ -53,7 +53,7 @@
             "dev-release-3.0.0": "3.0.x-dev"
         },
         "zf": {
-            "config-provider": "Zend\\Expressive\\Router\\ConfigProvider"
+            "config-provider": "Zend\\Expressive\\Router\\ZendRouter\\ConfigProvider"
         }
     },
     "scripts": {
