--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "php": "^7.1",
         "fig/http-message-util": "^1.1.2",
         "psr/http-message": "^1.0.1",
-        "zendframework/zend-expressive-router": "^3.0.0rc3",
+        "zendframework/zend-expressive-router": "^3.0",
         "zendframework/zend-psr7bridge": "^0.2.2 || ^1.0.0",
         "zendframework/zend-router": "^3.0.2"
     },
@@ -32,7 +32,7 @@
         "phpunit/phpunit": "^7.0.2",
         "zendframework/zend-coding-standard": "~1.0.0",
         "zendframework/zend-i18n": "^2.7.4",
-        "zendframework/zend-stratigility": "^3.0.0rc1"
+        "zendframework/zend-stratigility": "^3.0"
     },
     "autoload": {
         "psr-4": {
@@ -49,8 +49,8 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "2.2.x-dev",
-            "dev-develop": "3.0.x-dev"
+            "dev-master": "3.0.x-dev",
+            "dev-develop": "3.1.x-dev"
         },
         "zf": {
             "config-provider": "Zend\\Expressive\\Router\\ZendRouter\\ConfigProvider"
